--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-flask
-joblib
-pandas
-scikit-learn
-numpy
-gunicorn
-sklearn
+flask==3.0.0
+gunicorn==21.2.0
+joblib==1.3.2
+pandas==2.1.4
+scikit-learn==1.3.2
+numpy==1.26.2
